--- a/config.yaml
+++ b/config.yaml
@@ -12,9 +12,10 @@ params:
 artifacts: 
   artifacts_dir: artifacts
   model_dir: model
-  plots_dir: plots
+  plot_dir: plot
   checkpoint_dir: checkpoints
   model_name: model.h5
+  plot_name: plot
 
 logs:
   logs_dir:  logs_dir
