added artifacts folder

--- a/.gitignore
+++ b/.gitignore
@@ -132,8 +132,8 @@ dmypy.json
 .vscode/
 .idea/
 
-# ignore models
-*.h5
-
-# ignore images
-*.png
+## ignore models
+#*.h5
+#
+## ignore images
+#*.png
